Added and linked pages from respective sections, Added navbar hover effect

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <section>
         <img src="https://static01.nyt.com/images/2017/10/15/arts/design/15SINGH-slide-4HU3/15SINGH-slide-4HU3-articleLarge.jpg" alt="A photot by Raghubir Singh">
         <div class="text">
-            <h2>Editorial</h2>
+            <a href="/pages/editorial1.html"><h2>Editorial</h2></a>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam adipisci modi tempora perferendis. Natus perferendis consectetur dolores ad obcaecati id qui minima eaque, velit, nisi ab hic, est eius reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, necessitatibus voluptates, enim perferendis quos pariatur, ut id reiciendis sit suscipit corrupti! Ut consequatur hic possimus illo animi molestiae, corrupti mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugiat animi est corporis cupiditate, tenetur tempore saepe ea nam eveniet voluptate expedita reiciendis amet odit facere consequuntur veritatis enim laboriosam!</p>
         </div>
     </section>
     <section>
         <img src="https://media.newyorker.com/photos/59d685fc1211616b7fd10bb4/16:9/w_1711,h_962,c_limit/171016_r30710.jpg" alt="A photot by Raghubir Singh">
         <div class="text">
-            <h2>Editorial</h2>
+            <a href="/pages/editorial2.html"><h2>Editorial</h2></a>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam adipisci modi tempora perferendis. Natus perferendis consectetur dolores ad obcaecati id qui minima eaque, velit, nisi ab hic, est eius reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, necessitatibus voluptates, enim perferendis quos pariatur, ut id reiciendis sit suscipit corrupti! Ut consequatur hic possimus illo animi molestiae, corrupti mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugiat animi est corporis cupiditate, tenetur tempore saepe ea nam eveniet voluptate expedita reiciendis amet odit facere consequuntur veritatis enim laboriosam!</p>
         </div>
     </section>
     <section>
         <img src="https://static01.nyt.com/images/2017/10/15/arts/15SINGH-inline2/15SINGH-inline2-jumbo.jpg" alt="A photot by Raghubir Singh">
         <div class="text">
-            <h2>Editorial</h2>
+            <a href="/pages/editorial3.html"><h2>Editorial</h2></a>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam adipisci modi tempora perferendis. Natus perferendis consectetur dolores ad obcaecati id qui minima eaque, velit, nisi ab hic, est eius reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, necessitatibus voluptates, enim perferendis quos pariatur, ut id reiciendis sit suscipit corrupti! Ut consequatur hic possimus illo animi molestiae, corrupti mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci fugiat animi est corporis cupiditate, tenetur tempore saepe ea nam eveniet voluptate expedita reiciendis amet odit facere consequuntur veritatis enim laboriosam!</p>
         </div>
     </section>
